objects/ACCObject2__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>ACCObject2</label>
    <nameField>
        <label>ACCObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObject2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>